fix map filters being too close

--- a/src/styles/components/filters/_search.scss
+++ b/src/styles/components/filters/_search.scss
@@ -13,7 +13,7 @@
   height: 50px;
   display: flex;
   align-items: center;
-  margin-bottom: 0;
+  margin-bottom: 10px;
 
   box-shadow: 0px 0px 10px rgba($black, 0);
 
